package com.myuniversity.app.entity;

public enum ModePaiement {
    ESPECES, VIREMENT, CHEQUE, CARTE_BANCAIRE
}
