package com.myuniversity.app.entity;

public enum Role {
    ROLE_ADMIN,
    ROLE_PROFESSEUR,
    ROLE_ETUDIANT
}
