package com.myuniversity.app.entity;

public enum StatutPaiement {
    EN_ATTENTE, PAYE, EN_RETARD, ANNULE
}
